--- a/css/3-iconfont.css
+++ b/css/3-iconfont.css
@@ -1,3 +1,4 @@
+/*
 @font-face {
   font-family: 'icomoon';
   src:  url('fonts/icomoon.eot?8hl792');
@@ -10,15 +11,15 @@
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"], [class*=" icon-"] {*/
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
+  /* font-family: 'icomoon' !important; */
   /* speak: never; */
-  font-style: normal;
+  /*font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: 1;
+  line-height: 1;*/
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
